Improving and adding references.

--- a/references.bib
+++ b/references.bib
@@ -687,6 +687,81 @@ author = {Freek Stulp and Olivier Sigaud},
   url = {https://github.com/hadley/nycflights13},
 }
 
+@article{Bayes1763,
+  author = {Bayes, Thomas},
+  title = {An Essay towards Solving a Problem in the Doctrine of Chances},
+  journal = {Philosophical Transactions of the Royal Society of London},
+  volume = {53},
+  pages = {370--418},
+  year = {1763},
+  note = {Communicated by Richard Price},
+}
+
+@book{Gauss1809,
+  author    = {Gauss, Carl Friedrich},
+  title     = {Theoria Motus Corporum Coelestium in Sectionibus Conicis Solem Ambientium},
+  year      = {1809},
+  publisher = {Friedrich Perthes und I. H. Besser},
+  address   = {Hamburg, Germany},
+  language  = {latin}
+}
+
+@book{Playfair1786,
+  author    = {Playfair, William},
+  title     = {{The Commercial and Political Atlas}},
+  year      = {1786},
+  publisher = {Debrett; Robinson; and Sewell},
+  address   = {London, England},
+  note      = {Representing, by Means of Stained Copper-Plate Charts, the Progress of the Commerce, Revenues, Expenditure, and Debts of England during the Whole of the Eighteenth Century}
+}
+
+@article{Fisher1936,
+  author = {Fisher, Ronald A.},
+  title = {The Use of Multiple Measurements in Taxonomic Problems},
+  journal = {Annals of Eugenics},
+  volume = {7},
+  number = {2},
+  pages = {179--188},
+  year = {1936},
+  doi = {10.1111/j.1469-1809.1936.tb02137.x},
+  publisher={Wiley Online Library},
+}
+
+@article{Shannon1948,
+  author={Shannon, C. E.},
+  journal={The Bell System Technical Journal},
+  title={A mathematical theory of communication},
+  year={1948},
+  volume={27},
+  number={3},
+  pages={379-423},
+  doi={10.1002/j.1538-7305.1948.tb01338.x},
+}
+
+@techreport{Fix1951,
+ ISSN = {03067734, 17515823},
+ URL = {http://www.jstor.org/stable/1403797},
+ author = {Evelyn Fix and J. L. Hodges},
+ journal = {International Statistical Review / Revue Internationale de Statistique},
+ number = {3},
+ pages = {238--247},
+ publisher = {[Wiley, International Statistical Institute (ISI)]},
+ title = {Discriminatory Analysis. Nonparametric Discrimination: Consistency Properties},
+ volume = {57},
+ year = {1989}
+}
+
+@article{Rosenblatt1958,
+  title={The perceptron: a probabilistic model for information storage and organization in the brain.},
+  author={Rosenblatt, Frank},
+  journal={Psychological review},
+  volume={65},
+  number={6},
+  pages={386},
+  year={1958},
+  publisher={American Psychological Association}
+}
+
 @book{Tukey1977,
   title={Exploratory data analysis},
   author={Tukey, John Wilder},
