--- a/slides/fundamental.tex
+++ b/slides/fundamental.tex
@@ -54,11 +54,11 @@
 
 \begin{frame}{Definitions in the literature}
   \begin{itemize}
-    \item \textbf{Zumel \& Mount:} cross-disciplinary practice drawing on data
+    \item \textbf{Zumel \& Mount:}\footfullcite{Zumel2019} cross-disciplinary practice drawing on data
       engineering, statistics, data mining, ML, and predictive analytics
-    \item \textbf{Wickham \& Grolemund:} discipline that transforms raw data into
+    \item \textbf{Wickham \& Grolemund:}\footfullcite{Wickham2023} discipline that transforms raw data into
       understanding, insight, and knowledge
-    \item \textbf{Hayashi:} not only unifies statistics and data analysis, but
+    \item \textbf{Hayashi:}\footfullcite{Hayashi1998} not only unifies statistics and data analysis, but
       intends to analyze and understand actual phenomena with data
   \end{itemize}
 \end{frame}
