--- a/slides/learning.tex
+++ b/slides/learning.tex
@@ -85,7 +85,7 @@
 
 \begin{frame}{Statistical Learning Theory}
   \begin{itemize}
-    \item General framework for predictive learning
+    \item General framework for predictive learning\footfullcite{Vapnik1999b}
     \item Formalizes the learning problem
     \item Provides bounds on generalization ability
     \item Guides the design of learning machines
