--- a/slides/preprocessing.tex
+++ b/slides/preprocessing.tex
@@ -232,7 +232,7 @@
 
   \vspace{0.5cm}
   \raggedright\small
-  More advanced: One-Class SVM for generalizable outlier classification.
+  More advanced: One-Class SVM\footfullcite{Scholkopf2001} for generalizable outlier classification.
 \end{frame}
 
 \begin{frame}{Outlier removal}
@@ -430,7 +430,7 @@
 
   \vspace{0.3cm}
   \raggedright\small
-  Advanced: SMOTE creates synthetic minority samples without repetition.
+  Advanced: SMOTE\footfullcite{chawla2002smote} creates synthetic minority samples without repetition.
 \end{frame}
 
 % ===========================================================================
