--- a/slides/structured-data.tex
+++ b/slides/structured-data.tex
@@ -188,7 +188,7 @@
 % ===========================================================================
 
 \begin{frame}{Tidy data}
-  A standardized way to organize data values (Wickham, 2014):
+  A standardized way to organize data values\footfullcite{Wickham2014}:
   \begin{itemize}
     \item Each \textbf{value} belongs to a variable and an observation
     \item Each \textbf{variable} (column) = same attribute across units
