--- a/slides/validation.tex
+++ b/slides/validation.tex
@@ -571,7 +571,7 @@
   Let $z_k = p_k - p^*$ (performance gain over goal).
 
   \vspace{0.2cm}
-  Generative model (Benavoli et al., 2017):
+  Generative model\footfullcite{Benavoli2017}:
   \[
     \vec{z} = \vec{1}\mu + \vec{v}, \quad
     \vec{v} \sim \operatorname{MVN}(0, \Sigma)
