--- a/slides/data-handling.tex
+++ b/slides/data-handling.tex
@@ -475,8 +475,9 @@
     \item Formal algebra for data transformations is an open problem
     \item Statistical data handling $\neq$ relational algebra
       (transformation vs retrieval)
-    \item Notable efforts: SDTA, LaraDB (3 operators unifying RA + LA),
-      Modin (14 operators from pandas)
+    \item Notable efforts: SDTA\footfullcite{Song2021},
+      LaraDB\footfullcite{hutchison2017laradb} (3 operators unifying RA + LA),
+      Modin\footfullcite{petersohn2020towards} (14 operators from pandas)
     \item Desirable properties: completeness, composability
     \item Split invariance is a novel concept proposed in this book
     \item Future: a ``Turing complete'' data handling language
