General improvements on project chapter.

--- a/glossary.tex
+++ b/glossary.tex
@@ -26,6 +26,9 @@
 \newabbreviation{pca}{PCA}{principal component analysis}
 \newabbreviation{llm}{LLM}{large language model}
 \newabbreviation{eda}{EDA}{exploratory data analysis}
+\newabbreviation{devops}{DevOps}{development operations}
+\newabbreviation{mlops}{MLOps}{machine learning operations}
+\newabbreviation{dataops}{DataOps}{data operations}
 
 \newglossaryentry{ontology}{%
   name=ontology,
