--- a/references.bib
+++ b/references.bib
@@ -474,6 +474,14 @@ isbn="978-3-319-17091-6"
   keywords={Data science;Big Data;Task analysis;Scrum (Software development);Software engineering;SCRUM;data science;project management},
   doi={10.1109/ICBDA55095.2022.9760341}}
 
+@book{PMI2025,
+  title={A Guide to the Project Management Body of Knowledge ({PMBOK}\textsuperscript{\textregistered} Guide)},
+  author={{Project Management Institute}},
+  edition={8th},
+  year={2025},
+  publisher={Project Management Institute}
+}
+
 @book{schwaber2020scrum,
   title={Scrum Guide: The Definitive Guide to Scrum: The Rules of the Game},
   author={Schwaber, Ken and Sutherland, Jeff},
