Fixing some missing "bumping-version" information.
- Next time we bump version, first check if everything is up to date.

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,9 +1,9 @@
-@misc{verri2024datascienceproject,
+@misc{verri2026datascienceproject,
   author       = {Verri, Filipe Alves Neto},
   title        = {Data Science Project: An Inductive Learning Approach},
-  year         = 2024,
+  year         = 2026,
   publisher    = {Leanpub},
-  version      = {v0.1.0},
-  doi          = {10.5281/zenodo.14498011},
-  url          = {https://leanpub.com/dsp}
+  version      = {v0.1.1},
+  doi          = {10.5281/zenodo.14498010},
+  url          = {https://leanpub.com/dsp},
 }
