Drafting slides for the future exploration chapter.

--- a/references.bib
+++ b/references.bib
@@ -791,6 +791,49 @@ author = {Freek Stulp and Olivier Sigaud},
   author = {Chris Chatfield},
 }
 
+@book{Wilke2019,
+  author = {Claus O. Wilke},
+  title = {Fundamentals of Data Visualization: A Primer on Making Informative and Compelling Figures},
+  year = {2019},
+  publisher = {O'Reilly Media},
+  address = {Shelter Island, NY, USA},
+  edition = 1,
+  isbn = {978-1492031086},
+  pages = 387,
+  url = {https://clauswilke.com/dataviz/},
+}
+
+@book{Tufte2001,
+  author = {Edward R. Tufte},
+  title = {The Visual Display of Quantitative Information},
+  year = {2001},
+  publisher = {Graphics Press},
+  address = {Cheshire, CT, USA},
+  edition = 2,
+  isbn = {978-0961392147},
+  pages = 197,
+}
+
+@article{Crameri2020,
+  author = {Fabio Crameri and Grace E. Shephard and Philip J. Heron},
+  title = {The misuse of colour in science communication},
+  journal = {Nature Communications},
+  volume = {11},
+  number = {1},
+  pages = {5444},
+  year = {2020},
+  doi = {10.1038/s41467-020-19160-7},
+}
+
+@software{Crameri2023,
+  author       = {Crameri, Fabio},
+  title        = {Scientific colour maps},
+  year         = 2023,
+  publisher    = {Zenodo},
+  version      = {8.0.1},
+  doi          = {10.5281/zenodo.8409685},
+}
+
 @online{Zhao2025,
   title =        {Is Chain-of-Thought Reasoning of LLMs a Mirage? A Data Distribution Lens},
   author =       {Zhao, Chengshuai and Tan, Zhen and Ma, Pingchuan and Li, Dawei and Jiang, Bohan and Wang, Yancheng and Yang, Yingzhen and Liu, Huan},
