Fix CITATION.cff parsing and align citation metadata
- Fix invalid top-level `type: book` and `publisher` in CFF
- Add preferred-citation block, date-released
- Change @misc to @book in bib, main.tex, and README
- Use `note` field for version instead of non-standard `version`
- Complete .zenodo.json with description, publisher, access_right
- Update author biography in README

--- a/references.bib
+++ b/references.bib
@@ -1,11 +1,11 @@
-@misc{verri2026datascienceproject,
+@book{verri2026datascienceproject,
   author       = {Verri, Filipe Alves Neto},
   title        = {Data Science Project: An Inductive Learning Approach},
   year         = 2026,
   publisher    = {Leanpub},
-  version      = {v0.1.1},
   doi          = {10.5281/zenodo.14498010},
   url          = {https://leanpub.com/dsp},
+  note         = {Version v0.1.1},
 }
 
 @article{Benavoli2017,
