--- a/main.tex
+++ b/main.tex
@@ -36,14 +36,14 @@
 {
   \footnotesize\noindent Cite this book as:
   \begin{verbatim}
-  @misc{verri2026datascienceproject,
+  @book{verri2026datascienceproject,
     author = {Verri, Filipe Alves Neto},
     title = {Data Science Project: An Inductive Learning Approach},
     year = 2026,
     publisher = {Leanpub},
-    version = {v0.1.1},
     doi = {10.5281/zenodo.14498010},
-    url = {https://leanpub.com/dsp}
+    url = {https://leanpub.com/dsp},
+    note = {Version v0.1.1}
   }
   \end{verbatim}
 
